add proof of concept pdf generation

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "serve": "node ./back-src/index.js"
     },
-	"dependencies": {
-		"jspdf": "^2.5.1",
-		"pdf-lib": "^1.17.1",
-		"pdfkit": "^0.15.0",
-		"vite": "^5.4.2"
-	}
+    "dependencies": {
+        "express": "^4.19.2",
+        "jspdf": "^2.5.1",
+        "pdf-lib": "^1.17.1",
+        "pdfkit": "^0.15.0",
+        "vite": "^5.4.2"
+    }
 }
