--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "express": "^4.19.2",
         "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.8.3",
         "pdfkit": "^0.15.0",
         "vite": "^5.4.2"
     }
