pdfkit stress-test

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.8.3",
         "pdfkit": "^0.15.0",
+        "pdfkit-table": "^0.1.99",
         "vite": "^5.4.2"
     }
 }
