--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "jspdf-autotable": "^3.8.3",
         "pdfkit": "^0.15.0",
         "pdfkit-table": "^0.1.99",
+        "pdfmake": "^0.2.12",
         "vite": "^5.4.2"
     }
 }
